--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <head> <title>Git Test Project</title></head>
+    <head> <title>Git Project : Index</title></head>
     <body>
         <h1>This is first Git Project</h1>
     </body>
