--- a/about.html
+++ b/about.html
@@ -1,1 +1,6 @@
-dfgdfgbgcbcngcngc
+<html>
+    <head> <title>Git Project : Index</title></head>
+    <body>
+        <h1>This is first Git Project </h1>
+    </body>
+</html>
